@@ -1,3 +1,15 @@
+2012-12-11  Andrey Kosyakov  <caseq@chromium.org>
+
+        Web Inspector: better coverage for inspector/profiler/cpu-profiler-profiling-without-inspector.html
+        https://bugs.webkit.org/show_bug.cgi?id=104071
+
+        Reviewed by Pavel Feldman.
+
+        Extended test by spinning several function for a total of 400ms to provide coverage for sampling profiler.
+
+        * inspector/profiler/cpu-profiler-profiling-without-inspector-expected.txt:
+        * inspector/profiler/cpu-profiler-profiling-without-inspector.html:
+
 2012-12-10  Mihnea Ovidenie  <mihnea@adobe.com>
 
         [CSSRegions] Clean-up style for 2 regions expected results files
